--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -153,7 +153,7 @@ body {margin:0;}
 	
 <div></div>
 
-<button type="button" class="btn btn-lg btn-success" data-toggle="popover" title="Coming Soon!" data-content="Here you will build & design your virtual shop for free ! Earn money in your free time !">Design My Shop</button>
+<button type="button" class="btn btn-lg btn-success" data-toggle="popover" title="Coming Soon!" data-content="Here you will build & design your virtual shop for free ! Earn money in your free time !" data-placement="bottom"> Design My Shop</button>
 
 
             </div>
