--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -148,12 +148,13 @@ body {margin:0;}
                 	<p style="padding-top: 10px"></p>
                     <h2>My Dinero Space</h2>
                   <!--           <hr class="star-primary"> -->
+                  <p style="padding-top: 5px"></p>
                   <p><b>Hello, </b>{{username}}</p>
      
 	
 <div></div>
-
-<button type="button" class="btn btn-lg btn-success" data-toggle="popover" title="Coming Soon!" data-content="Here you will build & design your virtual shop for free ! Earn money in your free time !" data-placement="bottom"> Design My Shop</button>
+<p style="padding-top: 50px"></p>
+<button type="button" class="btn btn-block btn-lg btn-success" data-toggle="popover" title="Coming Soon!" data-content="Here you will build & design your virtual shop for free ! Earn money in your free time !" data-placement="bottom"> Design My Shop</button>
 
 
             </div>
