--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -65,9 +65,11 @@ body {margin:0;}
         #load{
     width:100%;
     height:100%;
+    left: 0px;
+    top: 0px;
     position:fixed;
     z-index:9999;
-    background:url("http://2.bp.blogspot.com/-JbBntT9YAY4/ViO_tqgWarI/AAAAAAAAAJk/9Q5Yyg4Hf8g/s1600-r/loading_cart.gif") no-repeat center center
+    background:url("http://2.bp.blogspot.com/-JbBntT9YAY4/ViO_tqgWarI/AAAAAAAAAJk/9Q5Yyg4Hf8g/s1600-r/loading_cart.gif") 50% 50% no-repeat rgb(249,249,249);
 }
 
 
