--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -57,7 +57,7 @@ body {margin:0;}
 }
 </style>
 
-           <style>
+           <style> #results { color:black;  }
 
         #load{
     width:100%;
