--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -109,6 +109,11 @@ body {margin:0;}
                     <li class="page-scroll">
                         <a href="http://dinero-web.heroku.com/my-space">My-Space</a>
                     </li>
+                    
+                                        <li class="page-scroll">
+                        <a href="http://dinero-web.heroku.com/marketplace">Dinero Market Place</a>
+                    </li>
+                    
                                                         <li class="page-scroll">
                         <a href="http://dinero-web.heroku.com/logout">Logout</a>
                     </li>
