--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -119,7 +119,7 @@
 
 <h5>Easy To Shop !</h5>
 
- <form method="post" action="/login" style="display: inline;" autocomplete="off">
+ <form method="post" action="/login" style="display: inline;" >
          <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email" autocomplete="off"></p>
 <p><input class="form-control" type="password" name="password" placeholder="Password" autocomplete="off"></p>
  <!--
