--- a/templates/results.html
+++ b/templates/results.html
@@ -172,15 +172,33 @@ body {margin:0;}
         </a>
       </h4>
     </div>
+    
+    
 
        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
       <div class="panel-body">
+   
+             <div class="container">
+<!--
+  <div class="btn-group btn-group-justified">
+    -->
+  <!--  <a href="#" class="btn btn-primary"><span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span></a> -->
+    <a style="width: 105px" href="http://dinero-web.heroku.com/results/cheap" class="btn btn-primary"><span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>Low-Cost</a>
+    <a style="width: 140px" href="http://dinero-web.heroku.com/results/freeshipping" class="btn btn-primary"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span>Free Shipping</a>
+    <a style="width: 95px" href="http://dinero-web.heroku.com/results" class="btn btn-primary"><span class="glyphicon glyphicon-random" aria-hidden="true"></span>All</a>
+
+
+ <!-- </div> -->
+</div> 
+    
+    
+    <!--
             <form action=http://dinero-web.heroku.com/results/freeshipping ><input  type="submit" value="Free Shipping" class="btn btn-outline-success btn-block"></form>
           <p></p>
       <form action=http://dinero-web.heroku.com/results/cheap ><input  type="submit" value="Low-Cost" class="btn btn-outline-success btn-block"></form>
           <p></p>
       <form action=http://dinero-web.heroku.com/results ><input type="submit" value="All Listings" class="btn btn-outline-success btn-block"></form>
-
+-->
         </div>
     </div>
   </div>   
