Revert "Update index.html"
This reverts commit df52b9e518f4afa1796a09bb99a20d59f934110b.

--- a/templates/index.html
+++ b/templates/index.html
@@ -187,7 +187,7 @@ body {margin:0;}
 <div id="contents">
 
 <form method="post" action="/search">
-<p style="padding-top: 20px"><input class="form-control" type="text" name="add" placeholder="Item Name"></p>
+<p style="padding-top: 20px"><input class="form-control" type="text" name="add" placeholder="Item Name" autocomplete="off"></p>
       <!-- icons buttons:
     <div id="icons">
 <p><input id=ebay class="floating-box img-thumbnail" type="image" src="../static/img/ebay.png" width="48" height="48"></p>
