--- a/templates/index.html
+++ b/templates/index.html
@@ -204,7 +204,7 @@ body {margin:0;}
 -->
 <center>
 <div style="text-align:center;">
-<button type="submit" style="width: 300px; height: 65px; display: inline-block;" class="btn btn-success btn-lg" id="load" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Search Now</button>
+<button type="submit" style="width: 300px; height: 65px; display: inline-block;" class="btn btn-success btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Search Now</button>
 </div>
 </center>
 </form>
