--- a/templates/results.html
+++ b/templates/results.html
@@ -310,7 +310,7 @@ body {margin:0;}
 $(document).ready(function() {
 
     // Setup - add a text input to each footer cell
-    $('#results tfoot th').each( function () {
+    $('#results thead th').each( function () {
         var title = $(this).text();
         $(this).html( '<input type="text" placeholder="Search '+title+'" />' );
     } );
