--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -136,7 +136,7 @@
 <img src="../static/img/or.jpg">
 
  <p></p>
- <a style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" href="http://dinero-web.heroku.com/facebook_login" >
+ <a style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" href="http://dinero-web.heroku.com/facebook_login"id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> >
   <span class="fa fa-facebook-square" style="padding-right:15px;"></span>
         Sign-In with Facebook
 
