--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -136,7 +136,7 @@
 <img src="../static/img/or.jpg">
 
  <p></p>
- <button href="http://dinero-web.heroku.com/facebook_login" type="submit" style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading..."><span class="fa fa-facebook-square" style="padding-right:15px;"></span>Sign-In With Facebook</button>
+ <button action="http://dinero-web.heroku.com/facebook_login" type="submit" style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading..."><span class="fa fa-facebook-square" style="padding-right:15px;"></span>Sign-In With Facebook</button>
  <p></p>
  <a style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" href="http://dinero-web.heroku.com/facebook_login">
   <span class="fa fa-facebook-square" style="padding-right:15px;"></span>
