--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -245,6 +245,24 @@ function goBack() {
   })
 </script>
 
+    <script>
+  $('#searchButton').on('click', function () {
+    var $btn = $(this).button('loading')
+    // business logic...
+    $btn.button('reset')
+  })
+</script>
+
+<script>
+	$('.btn').on('click', function() {
+    var $this = $(this);
+  $this.button('loading');
+    setTimeout(function() {
+       $this.button('reset');
+   }, 100000);
+});
+</script>
+
 </body>
 
 </html>
