--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -135,10 +135,10 @@
 
 <img src="../static/img/or.jpg">
 
-<form> action="http://dinero-web.heroku.com/facebook_login" </form>
+<form action="http://dinero-web.heroku.com/facebook_login" >
  <p></p>
  <button type="submit" style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading..."><span class="fa fa-facebook-square" style="padding-right:15px;"></span>Sign-In with Facebook</button>
-
+</form>
  
  <!--
  <a style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" href="http://dinero-web.heroku.com/facebook_login">
