--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -125,7 +125,7 @@
  <!--
  <button id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block">Login</button> -->
 <!-- <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/login"><input type="submit" value="Sign-In" class="btn btn-success btn-block btn-lg"></p> -->
-     <button type="submit" style="padding-top: 40px; width: 200px; height: 65px; display: inline-block;" class="btn btn-block btn-success btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Sign-In</button>
+     <button type="submit" style="padding-top: 40px; display: inline-block;" class="btn btn-block btn-success btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Sign-In</button>
 </form>
 
 <form action="http://dinero-web.herokuapp.com/signup">
