--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -120,12 +120,12 @@
 <h5>Easy To Shop !</h5>
 
  <form method="post" action="/login" style="display: inline;" >
-         <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email" autocomplete="off"></p>
+         <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email" ></p>
 <p><input class="form-control" type="password" name="password" placeholder="Password" autocomplete="off"></p>
  <!--
  <button id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block">Login</button> -->
 <!-- <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/login"><input type="submit" value="Sign-In" class="btn btn-success btn-block btn-lg"></p> -->
-     <button type="submit" style="padding-top: 40px; " class="btn btn-block btn-success btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Sign-In</button>
+     <button type="submit" class="btn btn-block btn-success btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Sign-In</button>
 </form>
 
 <form action="http://dinero-web.herokuapp.com/signup">
