--- a/templates/results.html
+++ b/templates/results.html
@@ -422,6 +422,15 @@ span.onclick = function() {
     </div>
 </div>
 -->
+<script>
+	$('.btn').on('click', function() {
+    var $this = $(this);
+  $this.button('loading');
+    setTimeout(function() {
+       $this.button('reset');
+   }, 100000);
+});
+</script>
 
 
 </body>
