--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -152,8 +152,8 @@ body {margin:0;}
                 <tr>
                 <td><big><b> <font color="#18bc9c">{{x[0]}}</font></big></td></b>
                 <td>{{x[1]}}</td>
-                <td><form method="post" action="http://dinero-web.heroku.com/history_results/{{x[0]}}"><p class="submit"><input type="submit" value="Results" class="btn btn-primary" name="add" ></p></form></td>
-                <td><form method="post" action="http://dinero-web.heroku.com/history/delete/{{x[1]}}"><p class="submit"><input type="submit" value="Delete" class="btn btn-danger" id={{x[0]}} ></p></form></td>
+                <td><form method="post" action="http://dinero-web.heroku.com/history_results/{{x[0]}}"><button type="submit" name="add" class="btn btn-primary" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Results</button></form></td>
+                <td><form method="post" action="http://dinero-web.heroku.com/history/delete/{{x[1]}}"><button type="submit" name="add" class="btn btn-danger" id="{{x[0]}}" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Deleting...">Delete</button></form></td>
              
                 </tr>
         {% endfor %}
@@ -234,6 +234,16 @@ function goBack() {
      js.src = "//connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
+</script>
+
+<script>
+	$('.btn').on('click', function() {
+    var $this = $(this);
+  $this.button('loading');
+    setTimeout(function() {
+       $this.button('reset');
+   }, 100000);
+});
 </script>
 <!--
     <div class="scroll-top page-scroll visible-xs visible-sm">
