--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Dinero</title>
+    <title>Joobot</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -101,11 +101,11 @@ body {margin:0;}
 <body id="page-top" class="index">
 
 <div class="icon_bar">
-  <a class="active" href="http://dinero-web.herokuapp.com/dinero"><i class="fa fa-search"></i></a>
-  <a href="http://dinero-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
-  <a href="http://dinero-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
-  <a href="http://dinero-web.herokuapp.com/history"><i class="fa fa-history"></i></a>
-  <a href="http://dinero-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
+  <a class="active" href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-search"></i></a>
+  <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
+  <a href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
+  <a href="http://joobot-web.herokuapp.com/history"><i class="fa fa-history"></i></a>
+  <a href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
 </div>
 
     <!-- Navigation -->
@@ -119,7 +119,7 @@ body {margin:0;}
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Dinero  </a>
+                <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Joobot  </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -129,16 +129,16 @@ body {margin:0;}
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://dinero-web.heroku.com/dinero">Dinero-Search</a>
+                        <a href="http://joobot-web.heroku.com/joobot">Joobot-Search</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://dinero-web.heroku.com/my-space">My-Space</a>
+                        <a href="http://joobot-web.heroku.com/my-space">My-Space</a>
                     </li>
                                         <li class="page-scroll">
-                        <a href="http://dinero-web.heroku.com/marketplace">Dinero Market Place</a>
+                        <a href="http://joobot-web.heroku.com/marketplace">Joo Market Place</a>
                     </li>
                                                         <li class="page-scroll">
-                        <a href="http://dinero-web.heroku.com/logout">Logout</a>
+                        <a href="http://joobot-web.heroku.com/logout">Logout</a>
                     </li>
                   
                 </ul>
@@ -175,7 +175,7 @@ body {margin:0;}
             <div class="row">
                 <div class="col-lg-12 text-center">
                 <div class="col-lg-12 text-center">
-                    <h2>Dinero Search</h2>
+                    <h2>Joo Search</h2>
                   <!--           <hr class="star-primary"> -->
 					
 <h4>Easy To Shop !</h4>
