--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.11/css/dataTables.semanticui.min.css">
  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css">
 
-    <title>Dinero</title>
+    <title>Joobot</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -85,11 +85,11 @@ body {margin:0;}
 <body id="page-top" class="index">
 
 <div class="icon_bar">
-  <a  href="http://dinero-web.herokuapp.com/dinero"><i class="fa fa-search"></i></a>
-  <a href="http://dinero-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
-  <a href="http://dinero-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
-  <a class="active" href="http://dinero-web.herokuapp.com/history"><i class="fa fa-history"></i></a>
-  <a href="http://dinero-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
+  <a  href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-search"></i></a>
+  <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
+  <a href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
+  <a class="active" href="http://joobot-web.herokuapp.com/history"><i class="fa fa-history"></i></a>
+  <a href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
 </div>
 
     <!-- Navigation -->
@@ -103,7 +103,7 @@ body {margin:0;}
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Dinero  </a>
+                <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Joobot  </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -113,16 +113,16 @@ body {margin:0;}
                         <a href="#page-top"></a>
                     </li>
                      <li class="page-scroll">
-                        <a href="http://dinero-web.heroku.com/dinero">Dinero-Search</a>
+                        <a href="http://joobot-web.heroku.com/joobot">Joobot-Search</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://dinero-web.heroku.com/my-space">My-Space</a>
+                        <a href="http://joobot-web.heroku.com/my-space">My-Space</a>
                     </li>
                                         <li class="page-scroll">
-                        <a href="http://dinero-web.heroku.com/marketplace">Dinero Market Place</a>
+                        <a href="http://joobot-web.heroku.com/marketplace">Joo Market Place</a>
                     </li>
                                                         <li class="page-scroll">
-                        <a href="http://dinero-web.heroku.com/logout">Logout</a>
+                        <a href="http://joobot-web.heroku.com/logout">Logout</a>
                     </li>
                 </ul>
             </div>
@@ -152,8 +152,8 @@ body {margin:0;}
                 <tr>
                 <td><big><b> <font color="#18bc9c">{{x[0]}}</font></big></td></b>
                 <td>{{x[1]}}</td>
-                <td><form method="post" action="http://dinero-web.heroku.com/history_results/{{x[0]}}"><button type="submit" name="add" class="btn btn-primary" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Results</button></form></td>
-                <td><form method="post" action="http://dinero-web.heroku.com/history/delete/{{x[1]}}"><button type="submit" name="add" class="btn btn-danger" id="{{x[0]}}" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Deleting...">Delete</button></form></td>
+                <td><form method="post" action="http://joobot-web.heroku.com/history_results/{{x[0]}}"><button type="submit" name="add" class="btn btn-primary" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Results</button></form></td>
+                <td><form method="post" action="http://joobot-web.heroku.com/history/delete/{{x[1]}}"><button type="submit" name="add" class="btn btn-danger" id="{{x[0]}}" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Deleting...">Delete</button></form></td>
              
                 </tr>
         {% endfor %}
