--- a/templates/404.html
+++ b/templates/404.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Dinero</title>
+    <title>Joobot</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -63,7 +63,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Dinero  </a>
+                <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Joobot  </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -116,9 +116,9 @@
 
 <h5>Oops ! the page you requested was not found !</h5>
 
- <form method="post" action="http://dinero-web.heroku.com/dinero" style="display: inline;" >
+ <form method="post" action="http://joobot-web.heroku.com/joobot" style="display: inline;" >
 
-  <center><p class="submit" style="width: 30px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/dinero"><input type="submit" value="Return to Dinero Search" class="btn btn-success btn-lg"></p></center>
+  <center><p class="submit" style="width: 30px; height: 65px; display: inline-block;" href="http://joobot-web.heroku.com/joobot"><input type="submit" value="Return to Joobot-Search" class="btn btn-success btn-lg"></p></center>
 
      </form>
 
