--- a/templates/index.html
+++ b/templates/index.html
@@ -158,7 +158,7 @@ body {margin:0;}
                     <div class="intro-text">
                         <span class="name">Shopping Is Easy!</span>
                         <hr class="star-light">
-                        <span class="skills">with Dinero</span>
+                        <span class="skills">with Joobot</span>
                     </div>
 					</div>
 
@@ -175,7 +175,7 @@ body {margin:0;}
             <div class="row">
                 <div class="col-lg-12 text-center">
                 <div class="col-lg-12 text-center">
-                    <h2>Joo Search</h2>
+                    <h2>Joo It!</h2>
                   <!--           <hr class="star-primary"> -->
 					
 <h4>Easy To Shop !</h4>
@@ -184,7 +184,7 @@ body {margin:0;}
 <div id="contents">
 
 <form method="post" action="/search">
-<p style="padding-top: 20px"><input class="form-control" type="text" name="add" placeholder="Item Name"></p>
+<p style="padding-top: 20px"><input class="form-control" type="text" name="add" placeholder="Your Item"></p>
       <!-- icons buttons:
     <div id="icons">
 <p><input id=ebay class="floating-box img-thumbnail" type="image" src="../static/img/ebay.png" width="48" height="48"></p>
@@ -204,7 +204,7 @@ body {margin:0;}
 -->
 <center>
 <div style="text-align:center;">
-<button type="submit" style="width: 300px; height: 65px; display: inline-block;" class="btn btn-success btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Search Now</button>
+<button type="submit" style="width: 300px; height: 65px; display: inline-block;" class="btn btn-success btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Joobot Searching...">Search Now</button>
 </div>
 </center>
 </form>
